# squintymongrel

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  deployment_filter.txt  squintymongrel.qrc
resources/: monaco-editor.html  monaco_example.html  squintymongrel.desktop
src/: cpp_endpoint.cpp  cpp_endpoint.h  main.cpp  monaco_text_editor.cpp  monaco_text_editor.h  squintymongrel_config.h  window.cpp  window.h
